@@ -41,10 +41,10 @@ public class After_pick extends KlavaProcess {
       double tol = 0.007;
       if ((norm <= tol)) {
         InputOutput.<String>println(String.format("I picked the object"));
-        final JointTrajectoryPoint jointTrajectoryPoints = new JointTrajectoryPoint().positions(
+        final JointTrajectoryPoint jointTrajectoryPoint = new JointTrajectoryPoint().positions(
           ((double[])Conversions.unwrapArray(Arrays.<Double>asList(
             Double.valueOf((-3.1415)), Double.valueOf((-0.2862)), Double.valueOf((-0.5000)), Double.valueOf(3.1400), Double.valueOf(1.6613), Double.valueOf((-0.0142))), double.class)));
-        final JointTrajectory afterPick = new JointTrajectory().points(((JointTrajectoryPoint[])Conversions.unwrapArray(Arrays.<JointTrajectoryPoint>asList(jointTrajectoryPoints), JointTrajectoryPoint.class))).jointNames(
+        final JointTrajectory afterPick = new JointTrajectory().point(jointTrajectoryPoint).jointNames(
           ((String[])Conversions.unwrapArray(Arrays.<String>asList("joint1", "joint2", "joint3", "joint4", "joint5", "joint6"), String.class)));
         pub.publish(afterPick);
         bridge.unsubscribe("/gripper_controller/state");
