@@ -44,14 +44,14 @@ proc After_pick() {
 			if (norm <= tol) {
 				println(String.format("I picked the object"))
 				// performing the referent position 
-				val jointTrajectoryPoints = new JointTrajectoryPoint()
+				val jointTrajectoryPoint = new JointTrajectoryPoint()
 					.positions(
 						Arrays.asList(
 							-3.1415, -0.2862, -0.5000, 3.1400, 1.6613, -0.0142
 						));
 				// JointTrajectory Initialization
 				val JointTrajectory afterPick = new JointTrajectory()
-					.points(Arrays.asList(jointTrajectoryPoints))
+					.point(jointTrajectoryPoint)
 					.jointNames(
 						Arrays.asList("joint1", "joint2", "joint3", "joint4", "joint5", "joint6")
 					);
